# cpp-template

./: .autoenv.zsh  .clang-format  .clangd  .gitignore  CMakeLists.txt  buffer.hpp  checker.hpp  context.hpp  dtypes.hpp  main.cpp  random.hpp
cmake/: FindNCCL.cmake
